--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                                 <div class="b-goods-f__sidebar"><span class="b-goods-f__price-group"><span class="b-goods-f__price bg-primary"><span class="b-goods-f__price-numb">$30,480</span></span>
                                     </span>
                                 </div>
-                            </div>
+                            </div>21
                         </div>
                         <!-- end .b-goods-->
                     </div>
